<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/adView"
    android:fillViewport="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/translate_titulo"
        android:textColorHint="@color/black"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate_selecionar_despesa_ou_receita"
            android:textColor="#000000"
            android:textStyle="bold"
            />
        <Spinner
            android:id="@+id/spinner_options_despesa_ou_receita"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/translate_spinner_selecionar_despesa_ou_receita"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">
        <LinearLayout
            android:id="@+id/cartaoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate_selecionar_cartao_credito_ou_debito"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_options"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/translate_spinner_selecionar_cartao_credito_ou_debito" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">
        <LinearLayout
            android:id="@+id/categoriaContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate_selecionar_categoria"
                android:textColor="#000000"
                android:textStyle="bold" />
            <Spinner
                android:id="@+id/spinner_options_categoria"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/translate_spinner_selecionar_categoria"
                />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prices_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textColorHint="@color/black"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/prices_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/translate_preco_total"
            android:inputType="numberDecimal"
            android:ems="10"
            android:maxLength="14"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <RadioButton
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/translate_checkbox_nao_parcelar" />
            <RadioButton
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate_checkbox_parcelar"
                />
            <RadioButton
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate_checkbox_fixo"
                />
        </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parcelar_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textColorHint="@color/black"
        android:visibility="gone">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parcelar_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/translate_numero_de_parcela"
            android:inputType="number"
            android:ems="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/calendarLayout50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        >
        <TextView
            android:id="@+id/calendarLabel50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate_selecione_o_vencimento"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="0dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewSelectedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="Data Inicial"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/translate_adicionar"
        android:text="@string/translate_adicionar"
        android:textAllCaps="false" />
</LinearLayout>
</ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/9214589741"
        />

</RelativeLayout>
