<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnotacoesSalvas">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cinza">

        <Button
            android:id="@+id/btnBefore"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/baseline_navigate_before_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/translate_voltar_um_mes" />

        <TextView
            android:id="@+id/txtMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agosto de 2023"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNext"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnBefore"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/baseline_navigate_next_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/translate_avançar_um_mes" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constrain_layout1"
        app:layout_constraintVertical_bias="0.000"
        android:background="@color/purple_700"
        >


        <TextView
            android:id="@+id/despesa_deste_mes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Despesa deste mês: R$ 6.100,49"
            android:layout_marginLeft="6dp"
            />

        <TextView
            android:id="@+id/receita_deste_mes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Receita deste mês: R$ 5.100,49"
            android:layout_marginLeft="6dp" />


        <TextView
            android:id="@+id/saldo_liquido_deste_mes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Saldo líquido do mês: R$ 1.200,50 "
            android:layout_marginLeft="6dp" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Total acumulado até aqui:R$ - 4.800,70"
            android:layout_marginLeft="6dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_add"
        android:contentDescription="@string/translate_adicionar_item" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/expandButton"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout2"
        android:importantForAccessibility="yes"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:contentDescription="@string/translate_lista_de_itens"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/my_row" />


    <ImageView
        android:id="@+id/expandButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="expandBottomSheet"
        android:src="@drawable/icon_seta_pra_cima"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        android:contentDescription="@string/translate_visualiar_grafico_por_categoria"/>



</androidx.constraintlayout.widget.ConstraintLayout>
