<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnotacoesSalvasFiltroCategorias">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_layout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cinza">

        <Button
            android:id="@+id/btnBefore10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/baseline_navigate_before_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/translate_voltar_um_mes" />

        <TextView
            android:id="@+id/txtMonth10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agosto de 2023"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNext10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnBefore10"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnNext10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/baseline_navigate_next_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/translate_avançar_um_mes" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linear_layout_filtro_categorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constrain_layout10"
        app:layout_constraintVertical_bias="0.000"
        android:background="@color/purple_700"
        >

        <TextView
            android:id="@+id/textViewDespesas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="6dp"

            />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_filtro_categorias"
        android:contentDescription="@string/translate_lista_de_itens"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
